<resources>
    <string name="app_name">RAFroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Podešavanja</string>
    <string name="search">Traži</string>
    <string name="predmeti">Svi predmeti</string>
    <string name="predava_i">Svi predavači</string>
    <string name="predavaci">Predavači</string>
    <string name="grupe1">Grupe</string>
    <string name="izaberite_grupu_ili_ime_predava_a_za_brzi_raspored">Izaberite grupu ili ime predavača za brži raspored</string>
    <string name="informacione_tehnologije">Informacione tehnologije</string>
    <string name="ra_unarski_dizajn">Računarski dizajn</string>
    <string name="ra_unarske_nauke">Računarske nauke</string>
    <string name="ra_unarsko_in_enjerstvo">Računarsko inženjerstvo</string>
    <string name="raf">RAF</string>
    <string name="picture">picture</string>
    <string name="grupe">Grupe</string>
    <string name="u_itaj_podatke">Učitaj podatke</string>
    <string name="nema_podataka">Nema podataka</string>


</resources>
