<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:fontFamily="@font/ibmplexserif_medium"
        app:showAsAction="never" />

    <item
        android:id="@+id/sviPredavaci"
        android:orderInCategory="98"
        android:title="@string/predava_i"
        android:fontFamily="@font/ibmplexserif_medium"
        app:showAsAction="never" />

    <item
        android:id="@+id/sviPredmeti"
        android:orderInCategory="97"
        android:title="@string/predmeti"
        android:fontFamily="@font/ibmplexserif_medium"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_logo"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_launcher_round"
        android:fontFamily="@font/ibmplexserif_medium"
        android:title="@string/raf"
        app:showAsAction="ifRoom" />
</menu>