<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/sviPredavaci"
        android:orderInCategory="98"
        android:title="@string/predava_i"
        app:showAsAction="never" />

    <item
        android:id="@+id/sviPredmeti"
        android:orderInCategory="97"
        android:title="@string/predmeti"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_logo"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/raf"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/exams"
        android:orderInCategory="3"
        android:title="Ispiti"
        app:showAsAction="never" />

    <item
        android:id="@+id/exams2"
        android:orderInCategory="4"
        android:title="Kolokvijumi"
        app:showAsAction="never" />

    <item
        android:id="@+id/osvezi"
        android:orderInCategory="200"
        android:title="Osveži podatke"
        app:showAsAction="never" />
</menu>