<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="24"
        android:gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/font_color"
        android:fontFamily="@font/ibmplexserif_medium"
        android:text="@string/izaberite_grupu_ili_ime_predava_a_za_brzi_raspored"
        android:textSize="20sp"/>


    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="20">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/buttonGrupe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/grupa"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:textSize="20sp"
                    android:ellipsize="end"
                    android:textColor="@color/font_color"
                    android:fontFamily="@font/ibmplexserif_medium"
                    android:text="@string/grupe"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="20">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/buttonPredavaci"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/profesor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:textSize="20sp"
                android:ellipsize="end"
                android:textColor="@color/font_color"
                android:fontFamily="@font/ibmplexserif_medium"
                android:text="@string/predavaci"/>
        </LinearLayout>
    </LinearLayout>

        </LinearLayout>


    <TextView
        android:id="@+id/textIzabrano"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="26"
        android:gravity="center"
        android:textColor="@color/font_color"
        android:fontFamily="@font/ibmplexserif_medium"
        android:textSize="25sp" />


</LinearLayout>